--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 glam = { version = "0.21.2", features = ["glam-assert", "bytemuck"] }
 bytemuck = { version = "1.9.1", features = ["derive"] }
 eyre = "0.6.7"
-gl = "0.14.0"
+# Latest version only has OpenGl 4.5
+gl = { git = "https://github.com/brendanzab/gl-rs" }
 gltf = "1.0.0"
 egui_sdl2_gl = "0.16.0"
 egui = "0.16"
