--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-glam = { version = "0.22", features = ["glam-assert", "bytemuck"] }
-bytemuck = { version = "1.9.1", features = ["derive"] }
-eyre = "0.6.7"
-
 #Latest version only has OpenGl 4.5
 gl = { git = "https://github.com/brendanzab/gl-rs" }
-gltf = { version = "1.0.0", features = ["KHR_materials_ior", "KHR_materials_clearcoat"] }
+# For clearcoat extension (main branch doesn't have it yet)
+gltf = { git = "https://github.com/TomasKralCZ/gltf/", branch = "clearcoat", version = "*", features = ["KHR_lights_punctual", "KHR_materials_clearcoat"] }
 image = { version = "0.24.2", features = ["png", "jpeg", "hdr"] }
 
 sdl2 = "0.35"
@@ -18,10 +15,12 @@ egui = "0.16"
 egui_sdl2_gl = "0.16.0"
 
 cstr = "0.2.11"
+glam = { version = "0.22", features = ["glam-assert", "bytemuck"] }
+bytemuck = { version = "1.9.1", features = ["derive"] }
+eyre = "0.6.7"
 
-# For clearcoat extension
-[patch.crates-io]
-gltf = { path = "../gltf" }
+[profile.dev]
+opt-level = 1
 
 [profile.dev.package."*"]
 opt-level = 3
