--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "pbr"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "shader_constants"
+path = "shader_constants/src/lib.rs"
+
 [dependencies]
 #Latest version only has OpenGl 4.5
 gl = { git = "https://github.com/brendanzab/gl-rs" }
@@ -14,6 +18,7 @@ sdl2 = { version = "0.35", features = ["bundled", "static-link"] }
 egui = "0.16"
 egui_sdl2_gl = "0.16.0"
 
+serde = { version = "1.0", features = ["derive"] }
 cstr = "0.2.11"
 glam = { version = "0.22", features = ["glam-assert", "bytemuck"] }
 bytemuck = { version = "1.9.1", features = ["derive"] }
@@ -23,6 +28,7 @@ globwalk = "0.8.1"
 [build-dependencies]
 tera = { version = "1.17", default-features = false }
 eyre = "0.6.7"
+shader_constants = { path = "shader_constants"}
 
 [profile.dev]
 opt-level = 1
