fix window DPI scaling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ gl = { git = "https://github.com/brendanzab/gl-rs" }
 gltf = { git = "https://github.com/TomasKralCZ/gltf/", branch = "clearcoat", version = "*", features = ["KHR_lights_punctual", "KHR_materials_clearcoat"] }
 image = { version = "0.24.2", features = ["png", "jpeg", "hdr"] }
 
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.44", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]}
+
 sdl2 = { version = "0.35", features = ["bundled", "static-link"] }
 egui = "0.16"
 egui_sdl2_gl = "0.16.0"
